--- a/app/src/main/res/layout/activity_billing.xml
+++ b/app/src/main/res/layout/activity_billing.xml
@@ -6,70 +6,53 @@
     android:layout_height="match_parent"
     tools:context=".Fragments.AccountFragment">
 
-    <de.hdodenhof.circleimageview.CircleImageView
-        android:id="@+id/ivProfilePic"
-        android:layout_width="@dimen/dp_100"
-        android:layout_height="@dimen/dp_100"
-        android:layout_marginStart="@dimen/dp_10"
-        android:layout_marginTop="@dimen/dp_50"
-        android:src="@drawable/pic"
-        app:civ_border_color="#03A9F4"
-        app:civ_border_overlay="true"
-        app:civ_border_width="@dimen/dp_2" />
-
     <TextView
-        android:id="@+id/tvName"
+        android:id="@+id/tvBilling1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/dp_20"
-        android:layout_marginTop="@dimen/dp_60"
-        android:layout_toEndOf="@id/ivProfilePic"
-        android:text="SUMIT SINGH"
+        android:layout_marginStart="@dimen/dp_10"
+        android:drawableStart="@drawable/ic_arrow_back"
+        android:layout_marginTop="20dp"
+        android:drawablePadding="@dimen/dp_20"
+        android:text="Invoices and Billing"
+        android:textColor="@color/olx"
         android:textSize="22sp"
         android:textStyle="bold" />
 
-    <TextView
-        android:id="@+id/tvEdit"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/tvName"
-        android:layout_marginStart="130dp"
-        android:text="View and edit profile"
-        android:textStyle="bold" />
-
     <View
-        android:layout_width="130dp"
-        android:layout_height="2dp"
-        android:layout_alignBottom="@id/tvEdit"
-        android:layout_marginStart="130dp"
+        android:id="@+id/view"
+        android:layout_width="match_parent"
+        android:layout_height="0.5dp"
+        android:layout_below="@id/tvBilling1"
+        android:layout_marginTop="@dimen/dp_10"
         android:background="@color/black" />
 
     <TextView
-        android:id="@+id/tvMyOrder_accountFragment"
+        android:id="@+id/tvMyOrder_BillingActivity1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/ivProfilePic"
+        android:layout_below="@id/view"
         android:layout_marginStart="@dimen/dp_10"
-        android:layout_marginTop="@dimen/dp_70"
-        android:drawableStart="@drawable/ic_baseline_shopping_bag_24"
+        android:layout_marginTop="@dimen/dp_10"
         android:drawablePadding="@dimen/dp_10"
-        android:text="Buy Package My orders"
+        android:text="Buy Packages"
+        android:textColor="@color/olx"
         android:textStyle="bold" />
 
     <TextView
         android:id="@+id/tvPackage"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/tvMyOrder_accountFragment"
-        android:layout_marginStart="@dimen/dp_40"
-        android:text="Package,orders,billing,invoices" />
+        android:layout_below="@id/tvMyOrder_BillingActivity1"
+        android:layout_marginStart="@dimen/dp_10"
+        android:text="sell fast with more margin" />
 
     <ImageView
-        android:id="@+id/ivBackArrow_MyOrder1"
+        android:id="@+id/ivBackArrow_MyOrder34"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
-        android:layout_marginTop="225dp"
+        android:layout_marginTop="@dimen/dp_80"
         android:layout_marginEnd="@dimen/dp_10"
         android:src="@drawable/ic_arrow_forward" />
 
@@ -82,27 +65,26 @@
         android:background="@android:color/darker_gray" />
 
     <TextView
-        android:id="@+id/tvSetting_Account"
+        android:id="@+id/tvSetting56"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/viewOne"
         android:layout_marginStart="@dimen/dp_10"
         android:layout_marginTop="@dimen/dp_20"
-        android:drawableStart="@drawable/ic_settings"
-        android:drawablePadding="@dimen/dp_10"
-        android:text="Settings"
+        android:text="My Orders"
+        android:textColor="@color/olx"
         android:textStyle="bold" />
 
     <TextView
         android:id="@+id/tvPrivacy"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/tvSetting_Account"
-        android:layout_marginStart="@dimen/dp_40"
-        android:text="Privacy and logout" />
+        android:layout_below="@id/tvSetting56"
+        android:layout_marginStart="@dimen/dp_10"
+        android:text="Active scheduled and expire order" />
 
     <ImageView
-        android:id="@+id/ivBackArrow_Settings2"
+        android:id="@+id/ivBackArrow_Settings"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/viewOne"
@@ -120,24 +102,23 @@
         android:background="@android:color/darker_gray" />
 
     <TextView
-        android:id="@+id/tvHelp"
+        android:id="@+id/tvInvoices"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/viewTwo"
         android:layout_marginStart="@dimen/dp_10"
         android:layout_marginTop="@dimen/dp_20"
-        android:drawableStart="@drawable/olx_2"
-        android:drawablePadding="@dimen/dp_10"
-        android:text="Help and Support"
+        android:text="Invoices"
+        android:textColor="@color/olx"
         android:textStyle="bold" />
 
     <TextView
         android:id="@+id/tvHelpSupport"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/tvHelp"
-        android:layout_marginStart="@dimen/dp_40"
-        android:text="Help Center" />
+        android:layout_below="@id/tvInvoices"
+        android:layout_marginStart="@dimen/dp_10"
+        android:text="sell and download" />
 
     <ImageView
         android:id="@+id/ivBackArrow_Help"
@@ -164,9 +145,8 @@
         android:layout_below="@id/viewThree"
         android:layout_marginStart="@dimen/dp_10"
         android:layout_marginTop="@dimen/dp_20"
-        android:drawableStart="@drawable/ic_baseline_language_24"
-        android:drawablePadding="@dimen/dp_10"
-        android:text="Select Language"
+        android:text="Billing Information"
+        android:textColor="@color/olx"
         android:textStyle="bold" />
 
     <TextView
@@ -174,8 +154,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/tvLanguage"
-        android:layout_marginStart="@dimen/dp_40"
-        android:text="English" />
+        android:layout_marginStart="@dimen/dp_10"
+        android:text="edit address etc" />
 
     <ImageView
         android:id="@+id/ivBackArrow_Language"
