--- a/app/src/main/res/layout/activity_include_some_details.xml
+++ b/app/src/main/res/layout/activity_include_some_details.xml
@@ -109,7 +109,7 @@
         android:hint="Description *" />
 
     <Button
-        android:id="@+id/brnNext"
+        android:id="@+id/btnNext"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/dp_20"
